# different-english-bot

./: .travis.yml  different-english-bot.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
