name:                different-english-bot
version:             0.1.0.0
homepage:            https://github.com/githubuser/different-english-bot#readme
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       text,
                       mtl,
                       transformers,
                       telegram-api,
                       http-client,
                       http-client-tls
  default-language:    Haskell2010

executable different-english-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, different-english-bot
  default-language:    Haskell2010

test-suite different-english-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , different-english-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
